[tool.poetry]
name = "aireflags-acquisition"
version = "0.1.0"
description = ""
authors = ["jun xiong <junxiong360@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
leafmap = "^0.30.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"